<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity"
    android:id="@+id/mainActivityId">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnListAllEntriesId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/listOfBor"
        android:src="@drawable/ic_baseline_format_list_bulleted_24"
        android:backgroundTint="@color/color_fab"
        app:borderWidth="0dp"
        app:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lockButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:borderWidth="0dp"
        android:src="@drawable/ic_baseline_lock_24"
        app:tint="@android:color/white"
        android:backgroundTint="@color/color_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/area_lock" />

    <ImageView
        android:id="@+id/logoId"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/img_of_key" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        app:layout_constraintBottom_toBottomOf="@id/logoId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/textEnterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_id"
        android:textSize="@dimen/text_size_enter_id"
        android:layout_margin="@dimen/margin_text_enter_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoId"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/inputTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_input_id"
        android:height="100dp"
        android:layout_margin="4dp"
        android:textColor="@color/white"
        android:padding="4dp"
        android:background="@color/back_color_input_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEnterId"/>


    <Button
        android:id="@+id/button7Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        android:textSize="@dimen/size_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextId"
        app:layout_constraintEnd_toStartOf="@id/button8Id"
        app:layout_constraintBottom_toTopOf="@id/button4Id"
        android:padding="@dimen/padd_number_buttons"
        android:layout_margin="@dimen/margin_button"/>

    <Button
        android:id="@+id/button8Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eigth"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toEndOf="@id/button7Id"
        app:layout_constraintTop_toBottomOf="@id/inputTextId"
        app:layout_constraintEnd_toStartOf="@id/button9Id"
        app:layout_constraintBottom_toTopOf="@id/button5Id"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/button9Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toEndOf="@id/button8Id"
        app:layout_constraintTop_toBottomOf="@id/inputTextId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button6Id"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/button4Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7Id"
        app:layout_constraintEnd_toStartOf="@id/button5Id"
        app:layout_constraintBottom_toTopOf="@id/button1Id"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/button5Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toEndOf="@id/button4Id"
        app:layout_constraintTop_toBottomOf="@id/button8Id"
        app:layout_constraintEnd_toStartOf="@id/button6Id"
        app:layout_constraintBottom_toTopOf="@id/button2Id"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/button6Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toEndOf="@id/button5Id"
        app:layout_constraintTop_toBottomOf="@id/button9Id"
        app:layout_constraintBottom_toTopOf="@id/button3Id"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/button1Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4Id"
        app:layout_constraintEnd_toStartOf="@id/button2Id"
        app:layout_constraintBottom_toTopOf="@id/buttonClearId"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/button2Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toEndOf="@id/button1Id"
        app:layout_constraintTop_toBottomOf="@id/button5Id"
        app:layout_constraintEnd_toStartOf="@id/button3Id"
        app:layout_constraintBottom_toTopOf="@id/button0Id"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/button3Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toEndOf="@id/button2Id"
        app:layout_constraintTop_toBottomOf="@id/button6Id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonOKId"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/buttonClearId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        android:textColor="@color/black"
        android:backgroundTint="@color/orange"
        android:textSize="@dimen/size_clear"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1Id"
        app:layout_constraintEnd_toStartOf="@id/button0Id"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/button0Id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        android:textSize="@dimen/size_number"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toEndOf="@id/buttonClearId"
        app:layout_constraintTop_toBottomOf="@id/button2Id"
        app:layout_constraintEnd_toStartOf="@id/buttonOKId"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padd_number_buttons"/>

    <Button
        android:id="@+id/buttonOKId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        android:text="@string/ok"
        android:textSize="@dimen/size_ok"
        android:layout_margin="@dimen/margin_button"
        app:layout_constraintStart_toEndOf="@id/button0Id"
        app:layout_constraintTop_toBottomOf="@id/button3Id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padd_number_buttons"/>

</androidx.constraintlayout.widget.ConstraintLayout>