<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakeOrBackKeyActivity"
    tools:showIn="@layout/activity_take_or_back_key"
    android:padding="@dimen/pad_main">

    <TextView
        android:id="@+id/titleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/tam_titles"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/nameOfUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/tam_titles"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/titleId"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/subtitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_get_which_key"
        android:textSize="@dimen/tam_subtitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleId"/>

    <TextView
        android:id="@+id/topicId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keys_of_sector"
        android:textSize="@dimen/tam_topics"
        android:layout_marginTop="@dimen/margin_subtitle_topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleId" />

    <TextView
        android:id="@+id/tvListEmptyId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/list_keys_empty_show"
        android:textColor="@color/red_alfha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topicId"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reclyclerListOfKeysOfUserId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/peek_height_yk"
        tools:listitem="@layout/layout_item_list_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topicId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>