<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/labelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_user"
        android:textSize="@dimen/title_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutMatId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_input_enter_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/matUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_id"
            android:inputType="number"
            android:textColorHint="@color/color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_input_enter_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLayoutMatId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="@color/color_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/deptUserId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_spinner"
        android:layout_margin="@dimen/margin_spinner"
        android:padding="@dimen/pad_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLayoutNameId"
        android:contentDescription="@string/sector"/>


</androidx.constraintlayout.widget.ConstraintLayout>